--- a/disclaimer/htdocs/css/disclaimer.css
+++ b/disclaimer/htdocs/css/disclaimer.css
@@ -1,5 +1,14 @@
 #disclaimer-dialog {
   display: none;
 }
-#disclaimer-dialog fieldset { padding:0; border:0; margin-top:25px; }
-#disclaimer-dialog h3 {font-size: 12px; font-weight: normal}
+#disclaimer-dialog .content { padding:10px; height:250px; overflow-x:hide; overflow-y:scroll; text-align:justify; }
+#disclaimer-dialog h3 {font-size: 12px; font-weight: bold;}
+
+#disclaimer-dialog .highlight { 
+  font-size: 100%; 
+  border: 1px solid #aba;
+  padding: 0; 
+  margin: 0; 
+  overflow-x: auto;
+  background: #f8f8f8;
+}
