--- a/disclaimer/templates/disclaimer.html
+++ b/disclaimer/templates/disclaimer.html
@@ -8,7 +8,7 @@
     <input type="hidden" name="name" value="${name}"/>
     <input type="hidden" name="body" value="${body}"/>
     <div class="highlight">
-     	<p class="content">${body}</p>
+     	${wiki_to_html(context, body, escape_newlines=preserve_newlines)}
     </div>
     <br />
     <div>
