--- a/disclaimer/templates/disclaimer.html
+++ b/disclaimer/templates/disclaimer.html
@@ -17,7 +17,7 @@
     	</div>
     	<div style="float:right; margin-top:-5px;">
     		<img id="save-spinner" src="${href.chrome('common','loading.gif')}" alt="Processing..."/>
-    		<input class="sprite-button sprite-button80" type="submit" name="send" value="Accept"/>
+    		<button class="btn btn-mini btn-primary" type="submit" name="send" value="Accept"><i class="icon-ok icon-white"></i> Accept</button>
     	</div>
     </div>
 	<div style="float:clear;" />
