Ref #5162 Hand-picked HTML changes from https://d4.define.logica.com/attachment/ticket/5162/font-awesome-update.patch (after filtering hunks with grep)
git-svn-id: file:///mnt/ramdisk/d4-svn/branches/features/ticket-5162-font-awesomev4@25069 484df14f-75d2-4b3f-8ba0-490e05069a01

--- a/disclaimer/templates/disclaimer.html
+++ b/disclaimer/templates/disclaimer.html
@@ -17,7 +17,7 @@
     	</div>
     	<div style="float:right; margin-top:-5px;">
     		<img id="save-spinner" src="${href.chrome('common','loading.gif')}" alt="Processing..."/>
-    		<button class="btn btn-mini btn-primary" type="submit" name="send" value="Accept"><i class="icon-ok icon-white"></i> Accept</button>
+    		<button class="btn btn-mini btn-primary" type="submit" name="send" value="Accept"><i class="fa fa-check fa-white"></i> Accept</button>
     	</div>
     </div>
 	<div style="float:clear;" />
