Ref #5162 Fix all icons in the ribbon
git-svn-id: file:///mnt/ramdisk/d4-svn/branches/features/ticket-5162-font-awesomev4@25103 484df14f-75d2-4b3f-8ba0-490e05069a01

--- a/disclaimer/templates/admin-disclaimer.html
+++ b/disclaimer/templates/admin-disclaimer.html
@@ -64,8 +64,8 @@ jQuery(document).ready(function($) {
             <input type="text" name="name" class="required" value="$name" style="width: 380px; color: black !important;"/>
          </div>
          <div class="buttons">
-           <button type="submit" class="btn btn-mini btn-primary" name="cancel" value="${_('Cancel')}"><i class="fa fa-times fa-white"></i> Cancel</button>
-           <button type="submit" class="btn btn-mini btn-primary" name="save" value="${_('Save')}"><i class="fa fa-hdd-o fa-white"></i> Save</button>
+           <button type="submit" class="btn btn-mini btn-primary" name="cancel" value="${_('Cancel')}"><i class="fa fa-times fa-inverse"></i> Cancel</button>
+           <button type="submit" class="btn btn-mini btn-primary" name="save" value="${_('Save')}"><i class="fa fa-hdd-o fa-inverse"></i> Save</button>
          </div>
 
        </form>
@@ -88,7 +88,7 @@ jQuery(document).ready(function($) {
 	            </fieldset>
 <div class="buttons">
                 <button class="btn btn-mini btn-primary" type="submit" name="add" value="${_('Add Disclaimer')}">
-                  <i class="fa fa-plus-circle fa-white"></i> Add Disclaimer
+                  <i class="fa fa-plus-circle fa-inverse"></i> Add Disclaimer
                 </button>
               </div>
         	 </div>
@@ -126,10 +126,10 @@ jQuery(document).ready(function($) {
             </p>
             <div class="buttons">
               <button class="btn btn-mini btn-primary" type="submit" value="${_('Remove Selected Items')}" name="remove">
-                <i class="fa fa-trash-o fa-white"></i> Remove Selected Items
+                <i class="fa fa-trash-o fa-inverse"></i> Remove Selected Items
               </button>
               <button class="btn btn-mini btn-primary" type="submit" name="apply" value="${_('Save')}">
-                <i class="fa fa-hdd-o fa-white"> Save
+                <i class="fa fa-hdd-o fa-inverse"> Save
               </button>
             </div>
 
