Fix missing end tag #5542
git-svn-id: file:///mnt/ramdisk/d4-svn/trunk@25633 484df14f-75d2-4b3f-8ba0-490e05069a01

--- a/disclaimer/templates/admin-disclaimer.html
+++ b/disclaimer/templates/admin-disclaimer.html
@@ -129,7 +129,7 @@ jQuery(document).ready(function($) {
                 <i class="fa fa-trash-o fa-inverse"></i> Remove Selected Items
               </button>
               <button class="btn btn-mini btn-primary" type="submit" name="apply" value="${_('Save')}">
-                <i class="fa fa-hdd-o fa-inverse"> Save
+                <i class="fa fa-hdd-o fa-inverse"></i> Save
               </button>
             </div>
 
